--- a/index.html
+++ b/index.html
@@ -39,10 +39,15 @@
 <main role="main" class="flex-shrink-0">
   <div class="container" >
       <!-- Intro Card -->
-      <div id="intro" style="text-align: center; ">
-        <img class="rounded" style="margin-bottom: 30px;" src="images/graham.png" alt="" height="120" width="120">
+      <div id="intro" style="text-align: center; margin-bottom: ;">
+        <img class="rounded" style="margin-bottom: 30px; margin-top: 5%;" src="images/graham.png" alt="" height="120" width="120">
         <h1 style="font-weight: 900;">GRAHAM ATLEE</h1>
-        <p style="text-align: left;">
+        <a style="color: #FF0266;" target="_blank" href="https://www.linkedin.com/in/grahamatlee/">LinkedIn</a> 
+        •
+        <a style="color: #FF0266;" target="_blank" href="https://github.com/atlee19?tab=repositories">Github</a>
+        •
+        <a style="color: #FF0266;" href="https://www.dropbox.com/s/k7mtw0105a21u20/GrahamAtleeResume.pdf?dl=1">Resume</a>
+        <p style="text-align: left; margin-top: 5%;">
            Hi, my name is Graham Atlee, I'm 21 years old, for the past 3 years
            I have been working on augmented-reality. I have developed a unique skillset from completing  
            software internships and by bootstrapping my own AR products. 
@@ -55,7 +60,7 @@
 
   <!-- What I work on -->
   <div class="container">
-    <h4 style="margin-bottom: 5%;">What I work on:</h4>
+    <h4 style="margin-bottom: 5%;">So what do I do?</h4>
 
     <h1 style="color: #FF0266; font-weight: 900;"><i>AUGMENTED REALITY</i></h1>
     <img class="img-fluid" src="images/hyper.png" alt="" srcset="">
@@ -68,7 +73,11 @@
 
   <div class="container">
     <h2>My AR Projects: </h2>
-    
+    <p>
+      I'm mostly a self taught engineer, with most of these projects I had to put in hours of learning to forge
+      the custom hardware and software you will see.
+    </p>
+
     <div class="card" style="width: 100%; background-color: #040A13; margin-top: 5%;">
       <img src="images/tritonLogo.png" width="50%" alt=""style="margin: 1%;">
       <img src="images/rightBlue.jpg" class="card-img-top" alt="...">
