--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
   <div class="container" >
       <!-- Intro Card -->
       <div id="intro" style="text-align: center; margin-bottom: ;">
-        <img class="rounded" style="margin-bottom: 30px; margin-top: 5%;" src="images/graham.png" alt="" height="120" width="120">
+        <img class="rounded" style="margin-bottom: 30px; margin-top: 5%;" src="images/me.jpg" alt="" height="170" width="120">
         <h1 style="font-weight: 900;">GRAHAM ATLEE</h1>
         <a style="color: #FF0266;" target="_blank" href="https://www.linkedin.com/in/grahamatlee/">LinkedIn</a> 
         •
@@ -74,8 +74,8 @@
   <div class="container">
     <h2>My AR Projects: </h2>
     <p>
-      I'm mostly a self taught engineer, with most of these projects I had to put in hours of learning to forge
-      the custom hardware and software you will see.
+      I'm mostly a self taught engineer, I've had to put in hours of learning to forge
+      the custom hardware and software you see here.
     </p>
 
     <div class="card" style="width: 100%; background-color: #040A13; margin-top: 5%;">
