--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 
   <!-- What I work on -->
   <div class="container">
-    <h4 style="margin-bottom: 5%;">So what do I do?</h4>
+    <h4 style="margin-bottom: 5%;">What I work on:</h4>
 
     <h1 style="color: #FF0266; font-weight: 900;"><i>AUGMENTED REALITY</i></h1>
     <img class="img-fluid" src="images/hyper.png" alt="" srcset="">
