--- a/index.html
+++ b/index.html
@@ -47,6 +47,9 @@
         <a style="color: #FF0266;" target="_blank" href="https://github.com/atlee19?tab=repositories">Github</a>
         •
         <a style="color: #FF0266;" href="https://www.dropbox.com/s/k7mtw0105a21u20/GrahamAtleeResume.pdf?dl=1">Resume</a>
+        •
+        <a style="color: #FF0266;" target="_blank" href="https://twitter.com/GrahamAtlee">Twitter</a>
+        
         <p style="text-align: left; margin-top: 5%;">
            Hi, my name is Graham Atlee, a 21 y/o developer. For the past 3 years
            I have been working on augmented-reality. I have developed a unique skillset from completing  
