swapped out photos

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
   <div class="container" >
       <!-- Intro Card -->
       <div id="intro" style="text-align: center; margin-bottom: ;">
-        <img class="rounded" style="margin-bottom: 30px; margin-top: 5%;" src="images/proffessional.png" alt="" height="170" width="141">
+        <img class="rounded" style="margin-bottom: 30px; margin-top: 5%;" src="images/GrahamNS.png" alt="" height="480" width="320">
         <h1 style="font-weight: 900;">GRAHAM ATLEE</h1>
         <a style="color: #FF0266;" target="_blank" href="https://www.linkedin.com/in/grahamatlee/">LinkedIn</a> 
         •
